@@ -34,9 +34,6 @@ Read clamd settings from FILE.
 \fB\-l FILE, \-\-log=FILE\fR
 Save the scan report to FILE.
 .TP 
-\fB\-\-log\-verbose\fR
-Save additional messages (mostly useless) to the report file.
-.TP 
 \fB\-\-no\-summary\fR
 Do not display summary at the end of scanning.
 .SH "EXAMPLES"
